<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp">


    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/book" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_wrap"
        android:layout_alignStart="@+id/detail_title"
        android:layout_below="@+id/detail_title"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp">

            <TextView
                android:id="@+id/detail_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/author" />

            <TextView
                android:id="@+id/detail_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/detail_author"
                android:layout_below="@+id/detail_author"
                android:layout_marginTop="20dp"
                android:text="@string/quote" />

            <TextView
                android:id="@+id/detail_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/detail_quote"
                android:layout_below="@+id/detail_quote"
                android:layout_marginTop="20dp"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/detail_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/detail_rate"
                android:layout_below="@+id/detail_rate"
                android:layout_marginTop="20dp"
                android:text="@string/hashtag" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/detail_bookcover"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@android:drawable/screen_background_dark_transparent" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_reviewgroup"
        android:layout_alignStart="@+id/detail_wrap"
        android:layout_below="@+id/detail_wrap"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/detail_review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thoughts" />
        <TextView
            android:id="@+id/detail_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_review_title"
            android:text="@string/thoughts" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/recordgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/detail_reviewgroup"
        android:layout_below="@+id/detail_reviewgroup"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:id="@+id/detail_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:layout_centerVertical="true"/>


        <ImageButton
            android:id="@+id/detail_record_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@+id/detail_audio"
            app:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/detail_record_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/detail_record_play"
            app:srcCompat="@android:drawable/ic_media_pause" />

    </RelativeLayout>

    <TextView
        android:id="@+id/detail_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/recordgroup"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/delete" />


</RelativeLayout>