<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <RelativeLayout
                android:id="@+id/titleline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/book" />

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/title"
                    android:textSize="20sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/authorline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleline"
                >
                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/author"/>

                <EditText
                    android:id="@+id/author_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/author"
                    android:textSize="20sp"
                     />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tagsline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/authorline"
                >
                <TextView
                    android:id="@+id/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/tags" />

                <EditText
                    android:id="@+id/tags_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tags" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/quoteline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tagsline"
                >

                <TextView
                    android:id="@+id/quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/quote"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/quote_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/quote"
                    android:lines="3"
                    android:ems="10"
                    android:inputType="textMultiLine"  />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rateline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quoteline"
                >
                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/rate" />

                <RatingBar
                    android:id="@+id/ratebar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/rate"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize=".5" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reviewline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rateline"
                >
                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/thoughts" />

                <EditText
                    android:id="@+id/review_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/review"
                    android:ems="10"
                    android:lines="6"
                    android:inputType="textMultiLine"  />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/recordline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviewline"
                tools:ignore="ExtraText">
                <TextView
                    android:id="@+id/record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/record" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/record"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">
                    <Button
                    android:id="@+id/startrecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/startrecord" />

                    <Button
                    android:id="@+id/stoprecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/startrecord"
                    android:text="@string/stoprecord" />

                    <ImageButton
                        android:id="@+id/playrecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/stoprecord"
                        app:srcCompat="@android:drawable/ic_media_play" />
                </LinearLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/recordline"
                android:text="@string/submit" />

        </RelativeLayout>



    </ScrollView>

</RelativeLayout>